 # [#30377] Add a tag filter to the sidebars in content managers. Thanks Elin
 # [#30355] Tagged item list is showing unpublished, trashed and archived items. Thanks Elin.
 # [#30389] List All Tags Not Routing to Single Tag Menu Item + . Thanks Mark.
 $ [#30402] Clarification of tags description (en-GB). Thanks Brian.
 $ [#30397] Correct en-GB grammar in installation. Thanks Brian.

26-Mar-2013 Jean-Marie Simonet
 $ Updating installation ini files: pt-BR, ckb-IQ

26-Mar-2013 Michael Babker
 # [#28972] Smart Search: suggestions are not filtered by current language
 ^ [#30104] Messages close button in Isis.  Thanks Mario
 # Undefined variable in JSchemaChangeitemPostgresql (discovered via unit test implementation)

25-Mar-2013 Michael Babker
 # [#30375] When state is changed in a list view it isn't changed in core_content
 # Incorrect field names used in JTableContenttype (discovered implementing unit tests)
 # [#30382] Fatal error in mod_weblinks.  Thanks Elin
 ^ [#30142] Add optional class param to accordion slider.  Thanks Anderson
 - [#30387] Remove compact.xml.  Thanks Elin

24-Mar-2013 Mark Dexter
 # [#30223] TAGS: Missing 'Help' Button in Toolbar.
 # [#30366] Help Screens, key wrong, missing or not created correctly.
 # [#30335] Updated Front-end Tags Layout. Thanks David.

24-Mar-2013 Michael Babker
 + [#30318] Pull in media wiki package from platform.  Thanks Elin
 ^ [#30356] Update JImage to latest platform version.  Thanks Don
 # [#30266] Array to string conversion in smart search.  Thanks Edgars
 # [#28978] Smart search (com_finder) - problem when using "Allow Empty Search".  Thanks Valentin
 # [#30338] Wrong contact items publishing state from Contact details > state.  Thanks Piotr
 + [#30369] Pull in OpenStreetMap package from the platform.  Thanks Elin
 + [#30364] Add UNION ALL feature from platform.  Thanks Elin
 ^ [#30180] argument three in phpdoc should be the variable name.  Thanks Alexander