@@ -238,7 +238,7 @@ class TagsViewTag extends JViewLegacy
 
 		// TODO create tag feed document
 		// Add alternative feed link
-		/*
+
 		if ($this->params->get('show_feed_link', 1) == 1)
 		{
 			$link	= '&format=feed&limitstart=';
@@ -247,6 +247,5 @@ class TagsViewTag extends JViewLegacy
 			$attribs = array('type' => 'application/atom+xml', 'title' => 'Atom 1.0');
 			$this->document->addHeadLink(JRoute::_($link.'&type=atom'), 'alternate', 'rel', $attribs);
 		}
-		*/
 	}
 }
