@@ -100,13 +100,13 @@ class TagsViewTags extends JViewLegacy
 			}
 			else
 			{
-				// Current view is not a single tag, so the article params take priority here
-				// Merge the menu item params with the article params so that the article params take priority
+				// Current view is not a single tag, so the tag params take priority here
+				// Merge the menu item params with the tag params so that the tag params take priority
 				$temp->merge($item->params);
 				$item->params = $temp;
 
 				// Check for alternative layouts (since we are not in a single-article menu item)
-				// Single-article menu item layout takes priority over alt layout for an article
+				// Single tag menu item layout takes priority over alt layout for a tag
 				if ($layout = $item->params->get('tag_layout'))
 				{
 					$this->setLayout($layout);
@@ -115,11 +115,11 @@ class TagsViewTags extends JViewLegacy
 		}
 		else
 		{
-			// Merge so that article params take priority
+			// Merge so that tag params take priority
 			$temp->merge($item[0]->params);
 			$item[0]->params = $temp;
 			// Check for alternative layouts (since we are not in a single-tag menu item)
-			// Single-tag menu item layout takes priority over alt layout for an article
+			// Single-tag menu item layout takes priority over alt layout for a tag
 			if ($layout = $item[0]->params->get('tag_layout'))
 			{
 				$this->setLayout($layout);
@@ -224,19 +224,18 @@ class TagsViewTags extends JViewLegacy
 					$this->document->setMetaData('author', $itemElement->created_user_id);
 				}
 
-				/* $mdata = $this->item->metadata->toArray();*/
-				/*foreach ($mdata as $k => $v)
+				$mdata = $this->item->metadata->toArray();
+				foreach ($mdata as $k => $v)
 				{
 					if ($v)
 					{
 						$this->document->setMetadata($k, $v);
 					}
-				}*/
+				}
 			}
 		}
-		// TODO create tags feed document
+
 		// Add alternative feed link
-		/*
 		if ($this->params->get('show_feed_link', 1) == 1)
 		{
 			$link	= '&format=feed&limitstart=';
@@ -245,6 +244,6 @@ class TagsViewTags extends JViewLegacy
 			$attribs = array('type' => 'application/atom+xml', 'title' => 'Atom 1.0');
 			$this->document->addHeadLink(JRoute::_($link.'&type=atom'), 'alternate', 'rel', $attribs);
 		}
-		*/
+
 	}
 }
