@@ -34,6 +34,7 @@ $ -> Language fix or change
  # [#30389] List All Tags Not Routing to Single Tag Menu Item + . Thanks Mark.
  $ [#30402] Clarification of tags description (en-GB). Thanks Brian.
  $ [#30397] Correct en-GB grammar in installation. Thanks Brian.
+ # [#30329] Missing tags feed and related items. Thanks Elin
 
 26-Mar-2013 Jean-Marie Simonet
  $ Updating installation ini files: pt-BR, ckb-IQ
